# case-bin

./: Cargo.toml  README.md
src/: case.rs  lib.rs  main.rs
tests/: from_valid.rs  non_injecttive.rs  repetitions.rs
