[package]
name = "recase"
version = "0.1.0"
edition = "2024"
authors = ["Tom Webber <t.c.w.webber@gmail.com>"]
description = "A CLI tool to convert strings between different cases"
license = "MIT OR Apache-2.0"
repository = "https://github.com/t-webber/recase"
readme = "README.md"
keywords = ["case", "cli", "string", "conversion"]
categories = ["command-line-utilities", "string-processing"]

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }

[lib]
name = "recase"

[[bin]]
name = "recase"
path = "src/main.rs"
